# shank

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/network/: Cargo.toml  README.md
crates/network/src/: config.rs  core.rs  error.rs  lib.rs  metrics.rs  network.rs  node.rs  transport.rs
crates/network/src/peer/: mod.rs  peer_info.rs  score.rs
crates/shank/: Cargo.toml
crates/sync/: README.md
crates/tendermint/: README.md
group/: Cargo.toml
group/src/: group.rs  lib.rs  member.rs
