[package]
edition = "2021"
name = "network"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12", features = ["attributes"]}
async-trait = "0.1"
env_logger = "0.10"
futures = "0.3.28"
multiaddr = {version = "0.17.1"}

[dependencies.libp2p]
default-features = false
features = ["async-std", "dns", "kad", "mdns", "noise", "macros", "tcp", "websocket", "yamux", "quic"]
version = "0.50.0"
